--- a/Css/shop.css
+++ b/Css/shop.css
@@ -148,7 +148,7 @@
     border: none;
     padding: 10px;
     cursor: pointer;
-    z-index: 1000;
+    z-index: 1;
     transition: transform 0.3s ease; /
 }
 @media(max-width:992px){
